--- a/client/src/Components/product-card/styles.css
+++ b/client/src/Components/product-card/styles.css
@@ -1,3 +1,4 @@
+ 
 .card {
     position: relative;
     background: #02010c;
@@ -63,12 +64,12 @@
     letter-spacing: 1px;
 } 
 
-.card:active .front {
+.card:hover .front {
 
     transform: perspective(600px) rotateY(180deg);
 }
 
-.card:active .back {
+.card:hover .back {
     transform: perspective(600px) rotateY(360deg);
 }
 
@@ -85,4 +86,7 @@
     color: darkorange;
     font-size: 1.2rem;
     font-weight: 500;
+    display: block;
 }
+
+
