--- a/client/src/Components/product-card/ProductCard.css
+++ b/client/src/Components/product-card/ProductCard.css
@@ -114,4 +114,46 @@
     }
     
 }
+@media screen and (max-width: 285px) {
+    .description{
+        color: darkorange;
+        font-size: 0.6rem;
+        font-weight: 500;
+        display: flex;
+    }
+    .card .back {
+        position: absolute;
+        transform: perspective(600px) rotateY(180deg);
+        background:black;
+        padding: 15px;
+        color: #000000;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        text-align: center;
+        box-shadow: 5px 5px 10px 5px #000;
+    }
+    .card .back .link {
+        border-top: solid 1px #f3f3f3;
+        height:400px;
+        line-height: 50px;
+    }
+    .price span{
+        color:darkorange;
+        font-size: 1rem;
+        font-weight: 500;
+    
+    }
+    .card .front h6 {
+        width: 100%;
+        height: 30px;
+        line-height: 45px;
+        color: rgb(255, 255, 255);
+        text-align: center;
+    }
+    .price{
+        font-size: 1rem;
+    }
+    
+}
 
