--- a/client/src/Components/ShoppingCart/Cart.css
+++ b/client/src/Components/ShoppingCart/Cart.css
@@ -122,7 +122,7 @@
     font-size:2rem;
     font-weight: 700;
     letter-spacing: 1px;
-    color: darkorange;
+    color: white;
 }
 
 .carrito_footer .btn{
