--- a/client/src/Components/product-card/ProductCard.css
+++ b/client/src/Components/product-card/ProductCard.css
@@ -15,7 +15,7 @@
     border-radius: 10px;
     overflow: hidden;
     transition: .5s;
-    box-shadow: 1px 1px 5px 1px rgba(223, 182, 0, 0.966);
+    box-shadow: 5px 5px 10px 5px rgba(223, 182, 0, 0.966);
 }
 
 .card .front {
@@ -38,16 +38,18 @@
 
 .card .back {
     position: absolute;
-    transform: perspective(600px) rotateY(180deg);
-    background:black;
-    padding: 15px;
+    transform: perspective(900px) rotateY(180deg);
+    background:rgb(0, 0, 0);
+    padding: 0px;
     color: #000000;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     text-align: center;
-    box-shadow: 5px 5px 10px 5px #000;
-}
+    box-shadow: 1px 1px 10px 1px #000;
+    width: 80%;
+    height: 80%;
+}   
 
 .card .back .link {
     border-top: solid 1px #f3f3f3;
@@ -65,7 +67,7 @@
 }
 
 .card:active .back {
-    transform: perspective(600px) rotateY(360deg);
+    transform: perspective(900px) rotateY(360deg);
 }
 
 .price{
@@ -79,18 +81,20 @@
 }
 .description{
     color: darkorange;
-    font-size: 1.2rem;
+    font-size: 1rem;
     font-weight: 500;
     display: flex;
 }
 .shopping_icon{
-    width: 30px;
-    height: 30px;
     border-radius: 5px;
     background-color: #F76E11;
     display: flex;
     justify-content: center;
     cursor: pointer;
+    
+}
+.shopping_icon box-icon{
+    fill: white;
 }
 
 /* .btn{
