--- a/client/src/Components/product-card/ProductCard.css
+++ b/client/src/Components/product-card/ProductCard.css
@@ -5,6 +5,8 @@
     border-radius: 10px;
     cursor: pointer;
     margin-top: 10%;
+    padding: 0px;
+    
 }
 
 .card .face {
@@ -19,6 +21,8 @@
 }
 
 .card .front {
+    height: 100%;
+    height: 100%;
     transform: perspective(600px) rotateY(0deg);
     box-shadow: 1px 1px 5px 1px rgba(223, 182, 0, 0.966);
 }
@@ -47,8 +51,8 @@
     justify-content: space-between;
     text-align: center;
     box-shadow: 1px 1px 10px 1px #000;
-    width: 80%;
-    height: 80%;
+    width: 100%;
+    height: 100%;
 }   
 
 .card .back .link {
@@ -84,6 +88,7 @@
     font-size: 1rem;
     font-weight: 500;
     display: flex;
+    margin-top: 5%;
 }
 .shopping_icon{
     border-radius: 5px;
@@ -97,62 +102,12 @@
     fill: white;
 }
 
-/* .btn{
-    width: 30px;
-    height: 30px;
-    border-radius: 5px;
-    background-color: #F76E11;
-    display: flex;
-    justify-content: center;
-    cursor: pointer;
-} */
-
-
-
-@media screen and (max-width: 1240px) {
-    .description{
-        color: darkorange;
-        font-size: 0.8rem;
-        font-weight: 500;
-        display: flex;
-    }
-    .card .back {
-        position: absolute;
-        transform: perspective(600px) rotateY(180deg);
-        background:black;
-        padding: 15px;
-        color: #000000;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        text-align: center;
-        box-shadow: 5px 5px 10px 5px #000;
-    }
-    .card .back .link {
-        border-top: solid 1px #f3f3f3;
-        height:300px;
-        line-height: 50px;
-    }
-    
-}
-@media screen and (max-width: 285px) {
+@media screen and (max-width: 560px) {
     .description{
         color: darkorange;
         font-size: 0.6rem;
         font-weight: 500;
         display: flex;
-    }
-    .card .back {
-        position: absolute;
-        transform: perspective(600px) rotateY(180deg);
-        background:black;
-        padding: 15px;
-        color: #000000;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        text-align: center;
-        box-shadow: 5px 5px 10px 5px #000;
     }
     .card .back .link {
         border-top: solid 1px #f3f3f3;
@@ -174,6 +129,20 @@
     }
     .price{
         font-size: 1rem;
+    }
+    
+    .shopping_icon{
+        padding: 0px;
+        cursor: pointer;
+        background-color: #f76E11;
+        
+    }
+    .shopping_icon .box-icon{
+        fill: white;
+        padding: 0px;
+
+
+        
     }
     
 }
