--- a/client/src/Components/product-card/ProductCard.css
+++ b/client/src/Components/product-card/ProductCard.css
@@ -26,6 +26,7 @@
     box-shadow: 1px 1px 5px 1px rgba(255, 253, 253,);
 }
 .card .front img {
+    padding: 3%;
     width: 100%;
     height: 100%;
     object-fit: cover;
