--- a/client/src/components/NewTableRequest/WaiterAssistanceButton.css
+++ b/client/src/components/NewTableRequest/WaiterAssistanceButton.css
@@ -1,4 +1,4 @@
-.button {
+.buttonGreen {
     display: inline-block;
     padding: 0.75rem 1.25rem;
     border-radius: 10rem;
@@ -11,33 +11,33 @@
     overflow: hidden;
     z-index: 1;
   }
-  .button:after {
+  .buttonGreen:after {
     content: "";
     position: absolute;
     bottom: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgb(82, 82, 82);
+    background-color: rgb(10, 10, 10);
     border-radius: 10rem;
     z-index: -2;
   }
-  .button:before {
+  .buttonGreen:before {
     content: "";
     position: absolute;
     bottom: 0;
     left: 0;
     width: 0%;
     height: 100%;
-    background-color: #1f1f1f;
+    background-color: #00b10f;
     transition: all 0.3s;
     border-radius: 10rem;
     z-index: -1;
   }
-  .button:hover {
+  .buttonGreen:hover {
     color: #fff;
   }
-  .button:hover:before {
+  .buttonGreen:hover:before {
     width: 100%;
   }
   
@@ -73,3 +73,6 @@
     color: #999;
     text-decoration: underline;
   }
+  
+  
+  
