--- a/client/src/Components/product-card/ProductCard.css
+++ b/client/src/Components/product-card/ProductCard.css
@@ -15,7 +15,7 @@
     backface-visibility: hidden;
     border-radius: 10px;
     overflow: hidden;
-    transition: .5s;
+    transition: 3s;
     box-shadow: 5px 5px 10px 5px rgb(84, 82, 82);
 }
 
