--- a/client/src/components/NewAllocatedTable/NewAllocatedTable.css
+++ b/client/src/components/NewAllocatedTable/NewAllocatedTable.css
@@ -1,9 +1,4 @@
-.Message{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
-    background-color: rgb(245, 253, 253);
-    left: 25%;
-    right: 25%;
+.Card img{
+    height: 250px;
+
 }
