--- a/client/src/pages/Reports.css
+++ b/client/src/pages/Reports.css
@@ -1,5 +1,16 @@
 .centrado { 
-    display: flex; 
-    justify-content: center; 
     align-items: center;
+    width: 40%;
+
+  }
+  .cardbodyc{
+    text-align: center;
+  }
+
+  .buttonpad{
+    padding: 10px;
+  }
+  .size{
+    align-items: center;
+    text-align: center;
   }
