--- a/client/src/components/OrderState/OrderState.css
+++ b/client/src/components/OrderState/OrderState.css
@@ -1,3 +1,37 @@
-.table{
-    text-align: center;
+.order-state__table{
+    margin-top: 50px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+}
+.order-state__card{
+    margin: 20px 0 10px 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    border: 1px solid black;
+    /* transition: 0.3s linear; */
+}
+
+.order-state__card:hover{
+    background-color: rgb(156, 156, 156);
+    transition: 0.3s linear;
+}
+
+.order-state__card:not(:hover){
+    transition: 0.3s linear;
+}
+
+.order-state__card p{
+    margin: 5px 30px;
+}
+
+
+@media (max-width: 768px) {
+    .order-state__card{
+        flex-direction: column;
+    }
+    
 }
