--- a/client/src/pages/LoginPage.css
+++ b/client/src/pages/LoginPage.css
@@ -9,12 +9,14 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
 }
 .login-form{
   width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
 }
 .login-input{
   width: 100%;
@@ -67,57 +69,16 @@
   width: 100%;
 }
 
+.login-title{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
 /* optional reset for presentation */
 * {
   font-family: Arial;
   text-decoration: none;
   font-size: 20px;
 }
-
-/* .container {
-  padding-top: 50px;
-  margin: 0 auto;
-  width: 100%;
-  text-align: center;
-}
-
-h1 {
-  text-transform: uppercase;
-  font-size: 0.8rem;
-  margin-bottom: 2rem;
-  color: #777;
-}
-
-span {
-  display: block;
-  margin-top: 2rem;
-  font-size: 0.7rem;
-  color: #777;
-}
-span a {
-  font-size: 0.7rem;
-  color: #999;
-  text-decoration: underline;
-}
-
-.Login {
-  padding: 2em;
-  text-align: center;
-  border-radius: 20px;
-  flex-direction: column;
-  justify-content: center;
-  flex: 1;
-}
-label{
-  display:inline-block;
-  width: 100%;
-  padding: 2px;
-  flex: auto;
-}
-h2{
-  padding: -50px;
-  text-align: center;
-  flex: auto;
-  color: #036592;
-  font: 100% Arial, Helvetica, sans-serif;
-} */
