--- a/client/src/components/ManageTables/Tables.css
+++ b/client/src/components/ManageTables/Tables.css
@@ -30,7 +30,7 @@
     left: 0;
     width: 0%;
     height: 100%;
-    background-color: #bd0202;
+    background-color: #a20404;
     transition: all 0.3s;
     border-radius: 10rem;
     z-index: -1;
