--- a/client/src/components/ManageUsers/Users.css
+++ b/client/src/components/ManageUsers/Users.css
@@ -1,11 +1,11 @@
-.users{
+.users-manager-container{
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 100%;
+    max-width: 95%;
     height: 100%;
-    margin: 50px 0;
+    margin: 50px auto;
 }
 .users-table{
     width: 100%;
@@ -15,4 +15,8 @@
     border: 1px solid #000;
     border-collapse: collapse;
     display: flex;
+}
+
+.users-manager-box{
+    max-width: 1010px;
 }
