--- a/client/src/Components/product-card/ProductCard.css
+++ b/client/src/Components/product-card/ProductCard.css
@@ -28,9 +28,13 @@
 }
 .card img{
     width: 100%;
-    height: 100%;
-    object-fit: cover;
+    height: 200px;
     padding: 3px;
+
+   
+
+
+
 }
 
 
@@ -103,6 +107,10 @@
 }
 
 @media screen and (max-width: 560px) {
+    .card img{
+        width: 100%;
+        height: 200px;
+    }
     .card.description{
         font-size: 0.6rem;
         font-weight: 500;
