--- a/client/src/Components/product-card/ProductCard.css
+++ b/client/src/Components/product-card/ProductCard.css
@@ -10,8 +10,8 @@
 
 .card .face-back{
     background-color: rgb(255, 253, 253);
-    width: 100%;
-    height: 100%;
+    width: 100px;
+    height: 100px;
     backface-visibility: hidden;
     border-radius: 10px;
     overflow: hidden;
@@ -20,15 +20,15 @@
 }
 
 .card .face-front {
-    height: 100%;
-    width: 100%;
+    height: 100px;
+    width: 100px;
     transform: perspective(600px) rotateY(0deg);
     box-shadow: 1px 1px 5px 1px rgba(255, 253, 253,);
     background-color: rgb(255, 253, 253);
 }
 .card img{
-    width: 100%;
-    height: 100%;
+    width: 100px;
+    height: 100px;
     object-fit: cover;
     padding: 3px;
 }
