--- a/client/src/Components/product-card/ProductCard.css
+++ b/client/src/Components/product-card/ProductCard.css
@@ -1,17 +1,8 @@
  
-.card {
-    position: relative;
-    border-radius: 10px;
-    cursor: pointer;
-    margin-top: 10%;
-    padding: 0px;
-    
-}
-
 .card .face-back{
     background-color: rgb(255, 253, 253);
-    width: 100px;
-    height: 100px;
+    width: 100%;
+    height: 100%;
     backface-visibility: hidden;
     border-radius: 10px;
     overflow: hidden;
@@ -20,8 +11,8 @@
 }
 
 .card .face-front {
-    height: 100px;
-    width: 100px;
+    height: 100%;
+    width: 100%;
     transform: perspective(600px) rotateY(0deg);
     box-shadow: 1px 1px 5px 1px rgba(255, 253, 253,);
     background-color: rgb(255, 253, 253);
@@ -30,12 +21,9 @@
     width: 100%;
     height: 200px;
     padding: 3px;
-
+    object-fit: cover;
    
-
-
-
-}
+} 
 
 
 .card .face-front h6 {
@@ -94,60 +82,35 @@
     position: absolute;
     margin-top: 5%;
 }
-.card .shopping_icon{
+.shopping_icon{
     border-radius: 5px;
-    background-color: #22201f;
-    display: flex;
+    background-color: #060606;
+    display:inline-flex;
     justify-content: center;
     cursor: pointer;
+   
+
+   
     
 }
 .card .shopping_icon box-icon{
     fill: white;
 }
 
-@media screen and (max-width: 560px) {
-    .card img{
-        width: 100%;
-        height: 200px;
-    }
-    .card.description{
-        font-size: 0.6rem;
-        font-weight: 500;
-        display: flex;
-    }
-    .card .back .link {
-        border-top: solid 1px #f3f3f3;
-        height:400px;
-        line-height: 50px;
-    }
-    .card.price span{
-        font-size: 1rem;
-        font-weight: 500;
-    
-    }
-    .card .front h6 {
-        width: 100%;
-        height: 30px;
-        line-height: 45px;
-        text-align: center;
-    }
-    .card.price{
-        font-size: 1rem;
-    }
-    
-    .card .shopping_icon{
-        padding: 0px;
+@media screen and (max-width: 400px) {
+    .shopping_icon{
+        display: grid;
+        height: 10px;
+        width: 20px;
         cursor: pointer;
-        
-    }
-    .card .shopping_icon .box-icon{
-        fill: white;
-        padding: 0px;
+        margin-top: 30px;      
+    } 
+  
+       
 
 
         
-    }
+    
     
 }
 
