--- a/client/src/components/Navbar/NewNavbar.css
+++ b/client/src/components/Navbar/NewNavbar.css
@@ -1,5 +1,6 @@
+
 .Navbar{
-    z-index: 1;
+    z-index: 5;
     position: absolute;
     top: 0;
     width: 100%;
@@ -53,8 +54,45 @@
     transition: .3s linear;
 }
 
+.Navbar__cart{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.5rem;
+    color: #fff;
+    margin: 0 10px;
+    cursor: pointer;
+    position: relative;
+    top: -10px;
+}
+.Navbar__item_total{
+    position: absolute;
+    top: -15px;
+    right: -10px;
+    width: 1.1rem;
+    height: 1.1rem;
+    border: 1px solid red;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    padding: 0rem;
+    font-size: .75rem;
+    font-weight: 700;
+    background-color: crimson;
+}
+
 
 @media screen and (max-width: 1370px){
+    .Responsive-Navbar{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: flex-end;
+        transition: 5s linear;
+    }
+
     .Navbar__links{
         display: none;
         transition: 2s;
@@ -74,6 +112,7 @@
         flex-direction: column;
         justify-content: flex-start;
         align-items: flex-start;
+        border-radius: 0 0 5px 0;
         background-color: #000000;
         position: relative;
         z-index: 1;
@@ -108,6 +147,39 @@
     }
     .Navbar-responsive__links:hover{
         right: -230px;
+    }
+    .Navbar-responsive__cart{
+        /* display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 1.5rem;
+        margin: 0 10px;
+        cursor: pointer;
+        position: relative; */
+        color: #fff;
+        top: 10px;
+        z-index: 6;
+        position: relative;
+        left: 90%;
+    }
+    .Navbar-responsive__item_total{
+        position: absolute;
+        /* top: -15px;
+        right: -10px; */
+        top: -10px;
+        left: 15px;
+        width: 1.1rem;
+        height: 1.1rem;
+        border: 1px solid red;
+        border-radius: 50%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        color: white;
+        padding: 0rem;
+        font-size: .75rem;
+        font-weight: 700;
+        background-color: crimson;
     }
 
 }
