--- a/client/src/components/OrderState/OrderState.css
+++ b/client/src/components/OrderState/OrderState.css
@@ -15,6 +15,17 @@
     /* transition: 0.3s linear; */
 }
 
+.order-state__card2{
+    margin: 20px 0 10px 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    border: 1px solid black;
+    border-radius: 5px;
+    /* transition: 0.3s linear; */
+}
+
 .order-state__card:hover{
     background-color: rgb(156, 156, 156);
     transition: 0.3s linear;
@@ -28,10 +39,28 @@
     margin: 5px 30px;
 }
 
+.orderItem{
+    margin-top: 10px;
+    margin-right: auto;
+    display: flex;
+    flex-direction: row;
+}
+
+.orderItemText{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.orderItemImage{
+    max-width: 100px;
+    max-height: 100px;
+    border-radius: 25%;
+}
 
 @media (max-width: 768px) {
     .order-state__card{
         flex-direction: column;
     }
-    
+
 }
