--- a/client/src/Components/product-card/ProductCard.css
+++ b/client/src/Components/product-card/ProductCard.css
@@ -1,20 +1,22 @@
  
 .card .face-back{
+
     background-color: rgb(255, 253, 253);
     width: 100%;
     height: 100%;
     backface-visibility: hidden;
     border-radius: 10px;
     overflow: hidden;
-    transition: 3s;
+    transition: 0.3;
     box-shadow: 5px 5px 10px 5px rgb(84, 82, 82);
 }
 
 .card .face-front {
     height: 100%;
     width: 100%;
-    transform: perspective(600px) rotateY(0deg);
+    transform: perspective(100px) rotateY(180deg);
     box-shadow: 1px 1px 5px 1px rgba(255, 253, 253,);
+    transition: 0.3;
     background-color: rgb(255, 253, 253);
 }
 .card img{
@@ -36,7 +38,7 @@
 
 .card .face-back {
     position: absolute;
-    transform: perspective(600px) rotateY(180deg);
+    transform: perspective(100px) rotateY(180deg);
     background-color: rgb(255, 253, 253);
     padding: 0px;
     color: #000000;
@@ -57,13 +59,13 @@
     line-height: 18em;
 }
 
-.card:focus.face-front {
+.card:hover.face-front {
 
-    transform: perspective(600px) rotateY(180deg);
+    transform: perspective(200px) rotateY(360deg);
 }
 
-.card:active .face-back {
-    transform: perspective(900px) rotateY(360deg);
+.card:hover .face-back {
+    transform: perspective(200px) rotateY(360deg);
 }
 
 .card .price{
