--- a/client/src/Components/ShoppingCart/Cart.css
+++ b/client/src/Components/ShoppingCart/Cart.css
@@ -1,24 +1,29 @@
 .carritos{
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
+    position: absolute;
+    top: -75px;
+    right: 100%;
     height: 100%;
     transition: all 300ms ease-in-out;
     background-color: rgb(255, 253, 253);
-    z-index: 2;
+    z-index: 10;
     padding-bottom: 5rem;
     visibility: hidden;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    /* align-items: flex-end; */
 }
 .carrito{
-    position: fixed;
-    top: 10%;
+    position: absolute;
+    max-width: 250px;
+    
+    /* top: 10%;
     left: 10%;
-    right: 10%;
-    transform: translateX(-50%, 50%);
+    right: 10%; */
+    /* transform: translateX(-50%, 50%); */
     scale:(.5);
-    width: 70%;
-    height:80%;
+    /* width: 70%; */
+    /* height:80%; */
     border-radius: 8px;
     overflow-x:scroll;
     transition: all 300ms ease-in-out;
@@ -34,11 +39,18 @@
 
 }
 .carritos.show{
+    /* width: 300px; */
+    width: 100%;
+    position: relative;
+    left: 30px;
     visibility: visible;
 }
 .carrito.show{
-    transform: translate(10%, -10%);
-    scale:(1.5);
+    width: 100%;
+    /* max-width: 250px; */
+    /* width: 100%; */
+    /* transform: translate(10%, -10%); */
+    /* scale:(1.5); */
     opacity: 1;
     visibility: visible;
 }
