--- a/client/src/Components/ShoppingCart/Cart.css
+++ b/client/src/Components/ShoppingCart/Cart.css
@@ -1,6 +1,6 @@
 .carritos{
     position: absolute;
-    top: -75px;
+    top: 60px;
     right: 100%;
     height: 100%;
     transition: all 300ms ease-in-out;
@@ -15,7 +15,7 @@
 }
 .carrito{
     position: absolute;
-    max-width: 250px;
+    /* max-width: 250px; */
     
     /* top: 10%;
     left: 10%;
