--- a/client/src/components/ManageDishCategories/DishCategories.css
+++ b/client/src/components/ManageDishCategories/DishCategories.css
@@ -1,17 +1,16 @@
-.dish-manager-container{
+.dish-category-manager-container{
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     max-width: 95%;
     height: 100%;
-    margin: 50px auto;
+    margin: 50px 0;
 }
-.dish-manager-container DataGrid{
+.dish-category-manager-container DataGrid{
     margin: auto;
 }
-
-.dish-manager-title{
+.dish-category-manager-title{
     margin: 50px 0;
     color:black;
 }
