--- a/client/src/Components/product-card/ProductCard.css
+++ b/client/src/Components/product-card/ProductCard.css
@@ -72,7 +72,8 @@
 .card .price span{
     color:rgb(10, 10, 10);
     font-size: 1.3rem;
-    font-weight: 500;
+    /* font-weight: 100; */
+    
 
 }
 .card .description{
