--- a/client/src/pages/OrdersPendingPaymentsPage.css
+++ b/client/src/pages/OrdersPendingPaymentsPage.css
@@ -1,9 +1,23 @@
-.ordenadito {
+/* .ordenadito {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin: 0 auto;
+  margin: 50px 50px;
   max-width: 800px;
   max-height: 800px;
+} */
+.ordenadito{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 100px auto;
+  max-width: 800px;
+}
+
+.ordenadito h1 {
+  color: black;
+  text-align: center;
+  margin: 50px 0;
 }
